--- a/MvcMovie.csproj
+++ b/MvcMovie.csproj
@@ -8,6 +8,7 @@
     <AssemblyProduct>Your Product Name</AssemblyProduct>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
+    <UserSecretsId>30f28020-26df-45a4-9ac6-bd4c5e6ca6c2</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
